--- a/index.html
+++ b/index.html
@@ -389,5 +389,6 @@
     <script type="text/javascript" src="http://caseyscarborough.github.io/github-activity/github-activity-0.1.0.min.js"></script>
     <!-- custom js -->
     <script type="text/javascript" src="assets/js/main.js"></script>
+    <script type="text/javascript" src="assets/js/analytics.js"></script>
 </body>
 </html>
